--- a/index.html
+++ b/index.html
@@ -633,15 +633,19 @@ function importFromCSV(file) {
                   }
                 }
               }
-              // Actualizar o agregar producto
-             const existing = products.find(p => 
-  (newProduct.itemNumber && p.itemNumber === newProduct.itemNumber) || 
-  (newProduct.upc && p.upc === newProduct.upc)
-);
-if (existing) {
-  // Solo actualiza si los dos códigos existen y coinciden
-  Object.assign(existing, newProduct);
+             // ✅ Arreglo: no sobrescribir productos ni fusionar por error
+if (
+  newProduct.itemNumber &&
+  products.some(p => p.itemNumber === newProduct.itemNumber)
+) {
+  // Ya existe un producto con ese itemNumber: solo lo actualizamos si el UPC también coincide
+  const existing = products.find(p =>
+    p.itemNumber === newProduct.itemNumber && p.upc === newProduct.upc
+  );
+  if (existing) Object.assign(existing, newProduct);
+  else imported.push(newProduct);
 } else {
+  // Si el itemNumber está vacío o es nuevo, se agrega sin tocar los demás
   imported.push(newProduct);
 }
               }
