Update color scheme in index.html
Replaced 'brand-cream' color with 'brand-white'.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         'brand-green': '#1A3C34',
                         'brand-red': '#A11F2D',
                         'brand-yellow': '#F4A261',
-                        'brand-cream': '#F5F1EB'
+                        'brand-white': '#FFFFFF'
                     }
                 }
             }
