--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <style>
-        body { font-family: 'Poppins', sans-serif; background-color: #F5F1EB; color: #1A3C34; }
+        body { font-family: 'Poppins', sans-serif; background-color: #FFFFFF; color: #1A3C34; }
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 12px 24px rgba(26, 60, 52, 0.15); }
         .custom-scrollbar::-webkit-scrollbar { width: 6px; height: 6px; }
         .custom-scrollbar::-webkit-scrollbar-track { background: #f1f1f1; }
